fix linter errors

--- a/index.html
+++ b/index.html
@@ -189,7 +189,6 @@
                         </div>
                         <div class="col-sm-12">
                             <article class="mb-4 border mt-5">
-                                <h2 class=""></h2>
                                 <a href="#">
                                     <img class="w-100" src="assets/insight-6.jpg" alt=" ">
                                     <span class="text-primary font-weight-bolder p-1">SPONSORED INSIGHT</span>
@@ -671,7 +670,7 @@
                                 </article>
                             </div>
 
-                            <form action="/action_page.php" class="container mb-5 pb-3 border">
+                            <form action="/action_page.php" class="container  border">
                                 <label class="font-weight-bold pt-2"><img src="assets/N-icon.png" alt=" "
                                         class="n-icon mr-2 float-left">START YOUR DAY WITH OUR TOP 5 ARTICLES</label>
                                 <div class="form-group" id="signup">
@@ -1273,7 +1272,7 @@
                               <div class="info">
                                   <h3>In-depth Stories You Don't See Elsewhere About Topics You Want to Read!</h3>
                                   <p>All Access + Weekly Delivery. Choose A Membership That's Perfect for You!</p>
-                                  <button class="btn btn-danger">SUBSCRIBE</button>
+                                  <button type="button" class="btn btn-danger">SUBSCRIBE</button>
                               </div>
                           </div>
                       </div>
@@ -1287,7 +1286,7 @@
                                   <p>See why nearly a quarter of a million subscribers begin their day with the Starting 5.</p>
                                   <form class="form-group">
                                         <label for="exampleInputEmail1"></label>
-                                        <input class="form-cont" type="email" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                                        <input class="form-cont" type="email" id="exampleInputEmai"  placeholder="Enter email">
                                       <button  type="submit" class=" bg-danger text-white
                                       m-3">FREE SIGN UP</button>
                                     </form>
@@ -1901,7 +1900,7 @@
                               <form action="/action_page.php" class="container mb-5 pb-3 border">
                                 <label class="font-weight-bold pt-2"><img src="assets/N-icon.png" alt=" "
                                         class="n-icon mr-2 float-left">START YOUR DAY WITH OUR TOP 5 ARTICLES</label>
-                                <div class="form-group" id="signup">
+                                <div class="form-group" id="signu">
                                     <input type="email" class="mail-form" placeholder="Email address">
                                     <input type="submit" class="submit-form" value="Sign Up For Free">
                                 </div>
@@ -2501,7 +2500,7 @@
                                           <div class="info">
                                               <h3>In-depth Stories You Don't See Elsewhere About Topics You Want to Read!</h3>
                                               <p>All Access + Weekly Delivery. Choose A Membership That's Perfect for You!</p>
-                                              <button class="btn btn-danger">SUBSCRIBE</button>
+                                              <button type="button" class="btn btn-danger">SUBSCRIBE</button>
                                           </div>
                                       </div>
                                   </div>
@@ -2514,7 +2513,7 @@
                                               <h3 class="heading">The Starting 5</h3>
                                               <p>See why nearly a quarter of a million subscribers begin their day with the Starting 5.</p>
                                               <form class="form-group">
-                                                    <label for="exampleInputEmail1"></label>
+                                                    <label for="example"></label>
                                                     <input class="form-cont" type="email" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                                                   <button  type="submit" class=" bg-danger text-white
                                                   m-3">FREE SIGN UP</button>
@@ -2530,9 +2529,9 @@
             <!-- U.S SECTION END -->
         
               
-        <footer class="row">
-            <div class="d-flex flex-row justify-content-between footer d-sm flex-column">
-                <div class="d-flex flex-row d-sm d-flex flex-column">
+        <footer>
+            <div class="d-flex flex-lg-row justify-content-between footer d-sm flex-column">
+                <div class="d-flex flex-lg-row d-sm d-flex flex-column">
                     <h1 class="text-red">NewsWeek</h1>
                     <p class="copyright">© 2021 NEWSWEEK DIGITAL LLC</p>
                 </div>
