fixed linter errors again

--- a/index.html
+++ b/index.html
@@ -2514,7 +2514,7 @@
                                               <p>See why nearly a quarter of a million subscribers begin their day with the Starting 5.</p>
                                               <form class="form-group">
                                                     <label for="example"></label>
-                                                    <input class="form-cont" type="email" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                                                    <input class="form-cont" type="email" id="example" placeholder="Enter email">
                                                   <button  type="submit" class=" bg-danger text-white
                                                   m-3">FREE SIGN UP</button>
                                                 </form>
