fixed the last linter error

--- a/index.html
+++ b/index.html
@@ -1285,8 +1285,8 @@
                                   <h3 class="heading">The Starting 5</h3>
                                   <p>See why nearly a quarter of a million subscribers begin their day with the Starting 5.</p>
                                   <form class="form-group">
-                                        <label for="exampleInputEmail1"></label>
-                                        <input class="form-cont" type="email" id="exampleInputEmai"  placeholder="Enter email">
+                                        <label for="exampleInput"></label>
+                                        <input class="form-cont" type="email" id="exampleInput"  placeholder="Enter email">
                                       <button  type="submit" class=" bg-danger text-white
                                       m-3">FREE SIGN UP</button>
                                     </form>
