--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <div class="container-fluid mx-auto">
+    <div class="container-fluid w-100">
         <nav class="navbar navbar-fixed-top btn-danger  d-none d-lg-flex not-sticky">
             <span class="d-none d-lg-block text-white text-monospace lead">Wed, Jan 20, 2021</span>
             <img class="navbar-brand w-25" src="assets/logo.png" alt="logo ">
