fix all linter errors

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="col-lg-3 d-flex align-items-center">
                   <p class="px-5 my-auto text-white">LOGIN</p>
-                  <button class="text-dark subscribe-btn rounded-pill bg-warning">
+                  <button type="button" class="text-dark subscribe-btn rounded-pill bg-warning">
                     SUBSCRIBE
                   </button>
                 </div>
@@ -130,7 +130,7 @@
                 <div class="col-md-4 col-sm-6 col-7 d-flex justify-content-end">
                   <div class="col-lg-3 d-flex align-items-center justify-content-end">
                     <p class="my-auto with-small text-white">LOGIN</p>
-                    <button class="text-dark subscribe-btn mx-3 bg-warning rounded-pill">
+                    <button type="button" class="text-dark subscribe-btn mx-3 bg-warning rounded-pill">
                       SUBSCRIBE
                     </button>
                     <i class="fas fa-bars text-white"></i>
@@ -2606,7 +2606,7 @@
 
                 <div class="d-flex flex-row justify-content-between mt-0">
                     <div class="d-flex d-sm d-flex flex-row">
-                        <a href=""></a><i class="fab fa-facebook fa-lg text-secondary p-2"></i></a>
+                        <a href=""><i class="fab fa-facebook fa-lg text-secondary p-2"></i></a>
                         <a href=""><i class="fab fa-twitter fa-lg text-secondary p-2"></i></a>
                         <a href=""><i class="fab fa-youtube fa-lg text-secondary p-2"></i></a>
                         <a href=""><i class="fab fa-instagram fa-lg text-secondary p-2"></i></a>
