add tablet version of newspaper sections and opinion sections

--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
                                     OPINION
                                 </div>
                                 <ul>
-                                    <li class="flex-sm d-flex border-bottom mb-1 ai-c align-items-center">
+                                    <li class="flex-sm d-flex flex-md-row border-bottom mb-1 ai-c align-items-center">
                                         <div class="image">
                                             <img src="assets/op1.jpg" alt="">
                                         </div>
@@ -611,11 +611,11 @@
                                             </div>
                                         </div>
                                     </li>
-                                    <li class="flex-sm d-flex border-bottom mb-1 ai-c align-items-center">
+                                    <li class="flex-sm d-flex flex-md-row border-bottom mb-1 ai-c align-items-center">
                                         <div class="image">
                                             <img src="assets/op2.jpg" alt="">
                                         </div>
-                                        <div class="info pl-3">
+                                        <div class="info d-flex flex-column align-items-start pl-3">
                                             <div class="titlle">
                                                 <h6><a href="#" class="font-weight-bolder text-dark text-decoration-none">After Violence at the Capitol, Congress Must Ensure
                                                         Election Integrity</a></h6>
@@ -626,11 +626,11 @@
                                             </div>
                                         </div>
                                     </li>
-                                    <li class="flex-sm d-flex border-bottom mb-1 ai-c align-items-center">
+                                    <li class="flex-sm d-flex flex-md-row border-bottom mb-1 ai-c align-items-center">
                                         <div class="image">
                                             <img src="assets/op3.jpg" alt="">
                                         </div>
-                                        <div class="info pl-3">
+                                        <div class="info d-flex flex-column align-items-start pl-3">
                                             <div class="titlle">
                                                 <h6><a href="#" class="font-weight-bolder text-dark text-decoration-none">Despite January 6, Trump Leaves a Legacy of Trust with
                                                         Voters</a></h6>
@@ -641,11 +641,11 @@
                                             </div>
                                         </div>
                                     </li>
-                                    <li class="flex-sm d-flex border-bottom mb-1 ai-c align-items-center">
+                                    <li class="flex-sm d-flex flex-md-row border-bottom mb-1 ai-c align-items-center">
                                         <div class="image">
                                             <img src="assets/narcism.jpg" alt="">
                                         </div>
-                                        <div class="info pl-3">
+                                        <div class="info d-flex flex-column align-items-start pl-3">
                                             <div class="titlle">
                                                 <h6><a href="#" class="font-weight-bolder text-dark text-decoration-none">Narcissism and Nihilism on Capitol Hill</a></h6>
                                             </div>
@@ -655,11 +655,11 @@
                                             </div>
                                         </div>
                                     </li>
-                                    <li class="flex-sm d-flex border-bottom mb-1 ai-c align-items-center">
+                                    <li class="flex-sm d-flex flex-md-row border-bottom mb-1 ai-c align-items-center">
                                         <div class="image">
                                             <img src="assets/exittrup.jpg" alt="">
                                         </div>
-                                        <div class="info pl-3">
+                                        <div class="info d-flex flex-column align-items-start pl-3">
                                             <div class="titlle">
                                                 <h6><a href="#" class="font-weight-bolder text-dark text-decoration-none">Exit Trump, Tragic American Hero</a></h6>
                                             </div>
@@ -669,11 +669,11 @@
                                             </div>
                                         </div>
                                     </li>
-                                    <li class="flex-sm d-flex border-bottom mb-1 ai-c align-items-center">
+                                    <li class="flex-sm d-flex flex-md-row border-bottom mb-1 ai-c align-items-center">
                                         <div class="image">
                                             <img src="assets/markdev.jpg" alt="">
                                         </div>
-                                        <div class="info pl-3">
+                                        <div class="info d-flex flex-column align-items-start pl-3">
                                             <div class="titlle">
                                                 <h6><a href="#" class="font-weight-bolder text-dark text-decoration-none">As the 46th President Takes Office, Let's Discuss the
                                                         47th</a></h6>
@@ -684,11 +684,11 @@
                                             </div>
                                         </div>
                                     </li>
-                                    <li class="flex-sm d-flex border-bottom mb-1 ai-c align-items-center">
+                                    <li class="flex-sm d-flex flex-md-row border-bottom mb-1 ai-c align-items-center">
                                         <div class="image">
                                             <img src="assets/european.jpg" alt="">
                                         </div>
-                                        <div class="info pl-3">
+                                        <div class="info d-flex flex-column align-items-start pl-3">
                                             <div class="titlle">
                                                 <h6><a href="#" class="font-weight-bolder text-dark text-decoration-none">Is the European Union Combating or Whitewashing
                                                         Anti-Semitism?</a></h6>
@@ -1077,15 +1077,15 @@
                     <div class="col-md-4">
                         <div class="feature">
                             <ul>
-                                <li class="flex-xs d-flex pb-2 border-bottom">
+                                <li class="flex d-flex pb-2 border-bottom">
                                     <img src="assets/tigerking.jpg" alt="" class="feature2-image">
                                     <a href="" class=" pl-2 text-dark text-decoration-none">'Tiger King' Zoo Owners Ordered To Hand Over Big Cats to Government</a>
                                 </li>
-                                <li class="flex-xs d-flex pb-2 border-bottom">
+                                <li class="flex d-flex pb-2 border-bottom">
                                     <img src="assets/us-right-3.jpg" alt="" class="feature2-image">
                                     <a href="" class=" pl-2 text-dark text-decoration-none">Trump Cuts Kwame Kilpatrick's Jail Time for Detroit Corruption by 20 Years</a>
                                 </li>
-                                <li class="flex-xs d-flex pb-2">
+                                <li class="flex d-flex pb-2">
                                     <img src="assets/us-right-4.jpg" alt="" class="feature2-image">
                                     <a href="" class=" pl-2 text-dark text-decoration-none">Video of Police Dog Arlo Going Home After Shooting Viewed 41 Million Times</a>
                                 </li>
