--- a/index.html
+++ b/index.html
@@ -1313,10 +1313,10 @@
               </div>
 
               <div class="subscribe-content mb-5">
-                <div class="row flex-md border-top ">
-                      <div class="col-md-12 col-lg-8 flex-md fd-c ">
+                <div class="row border-top ">
+                      <div class="col-md-12  col-lg-8  fd-c ">
                           <div class="block-title pb-3 text-danger font-weight-bolder">SUBSCRIBE</div>
-                          <div class="col-1 position-relative p-10 bg-light align-items-center flex-sm d-flex fd-c">
+                          <div class="flex-md-row col-1 position-relative p-10 bg-light align-items-center flex-sm d-flex fd-c">
                               <div class="image-subscribe position-relative pr-5 pb-4">
                                   <div class="under-image">
                                       <img data-src="https://web.archive.org/web/20210120125445/https://d.newsweek.com/en/full/1700315/january-15-2021-cover.jpg?w=170&amp;q=95&amp;f=02cc1a3558f7d7b001baea3b926907e7" alt="" class="lazyloaded" src="https://web.archive.org/web/20210120125445im_/https://d.newsweek.com/en/full/1700315/january-15-2021-cover.jpg?w=170&amp;q=95&amp;f=02cc1a3558f7d7b001baea3b926907e7">
@@ -1325,17 +1325,17 @@
                                       <img data-src="https://web.archive.org/web/20210120125445/https://d.newsweek.com/en/full/1704591/cover-january-22-2021.jpg?w=170&amp;q=95&amp;f=ee95940a99c02547a13c42e35dbfbc84" alt="" class="lazyloaded" src="https://web.archive.org/web/20210120125445im_/https://d.newsweek.com/en/full/1704591/cover-january-22-2021.jpg?w=170&amp;q=95&amp;f=ee95940a99c02547a13c42e35dbfbc84">
                                   </div>
                               </div>
-                              <div class="info pl-5">
+                              <div class="d-flex flex-md-column  pl-5">
                                   <h3>In-depth Stories You Don't See Elsewhere About Topics You Want to Read!</h3>
                                   <p class="mt-3">All Access + Weekly Delivery. Choose A Membership That's Perfect for You!</p>
-                                  <button type="button" class="btn btn-danger">SUBSCRIBE</button>
+                                  <button type="button" class="w-50 btn btn-danger">SUBSCRIBE</button>
                               </div>
                           </div>
                       </div>
           
                       <div class="col-md-12 col-lg-4 flex-md fd-c">
                           <div class="block-title pb-3 text-danger font-weight-bolder">NEWSLETTER</div>
-                          <div class="flex-sm d-flex">
+                          <div class="flex d-flex">
                               <div class="img-half position-relative h-40"></div>
                               <div class="f2 border p-3">
                                   <h3 class="heading font-weight-bold text-dark">The Starting 5</h3>
