--- a/index.html
+++ b/index.html
@@ -1716,7 +1716,7 @@
                                     </div>
                                     <div class="clearfix pt-1 pb-1 border-top-1">
                                         <div class="image-float-m">
-                                            <img class="mr-2" src="asset" alt="missispi">
+                                            <img class="mr-2" src="assets/missisipi.jpg" alt="missispi">
                                         </div>
                                         <h4 class="small-font"><a href="#" class="font-weight-bold mb-1 text-dark text-decoration-none">Sanders, Warren Warn Senate Majority Will Be Used
                                                 in 'Very
